# elec

./: .gdbinit  Cargo.toml  debug.sh  memory.x
.cargo/: config
src/: communicator.rs  main.rs  robot.rs  servo.rs
