[package]
authors = ["Paul Florence <florencepaul@hotmail.fr"]
name = "nucleo_rust"
version = "0.3.1"
[dependencies]
embedded-hal = "0.2.1"
nb = "0.1.1"

[dependencies.cortex-m]
version = "0.5.0"

[dependencies.stm32f446-hal]
path = "/home/paul/repos/robot/rust/stm32f446-hal"

[dependencies.cortex-m-rt]
version = "0.5.0"

[dependencies.cortex-m-semihosting]
version = "0.3.0"

[dependencies.panic-semihosting]
version = "0.2.0"
[profile.release]
codegen-units = 1
debug = true
lto = true
